add notification and navigation components and icons and images resources

--- a/index.html
+++ b/index.html
@@ -5,9 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="assets/styles/css/style.css">
-    <title>Vicom Store | Ecommerce</title>
+    <title>La Vasconia</title>
 </head>
 <body>
-    <h1>Welcome<h1>
+    <aside class="notification">
+        <p>ENVÍO GRATIS EN PEDIDOS DESDE $699</p>
+    </aside>
+    <header class="header">
+        <nav class="nav">      
+            <img src="./assets/images/logovasconia.png" alt="Logo Vasconia">
+            <div class="nav__links">
+                <a href="example.com">Cocción</a>
+                <a href="example.com">Preparación</a>
+                <a href="example.com">Mesa y accesorios</a>
+                <a href="example.com">Consumibles</a>
+                <a href="example.com">Electrodomésticos</a>
+                <a href="example.com">Línea profesional</a>
+            </div>
+            <div class="nav__icons">
+                <img src="./assets/icons/user-icon.svg" alt="user icon" srcset="">
+                <img src="./assets/icons/car-icon.svg" alt="car icon" srcset="">
+            </div>
+        </nav>
+    </header>
+    <main>
+    
+    </main>
 </body>
 </html>
