add main static slide of brand and add main recipe sections and modified variables also icluded links styles

--- a/index.html
+++ b/index.html
@@ -29,7 +29,34 @@
         </nav>
     </header>
     <main>
-    
+        <section class="main__slide">
+            <img src="./assets/images/EKCO.png" alt="Ecko logo" >
+            <div class="main__slide--promo">
+                <img src="./assets/images/ecko-landing.png" alt="Promoción eco classic" >                          
+            </div>
+        </section>
+        
+        <section class="main__recipe">
+            <article class="main__recipe--container">
+                <div class="main__recipe--image">
+                    <img src="./assets/images/receta1.png" alt="imagen de receta camarones al mojo de ajo" srcset="">
+                </div>
+                <div class="main__recipe--details">
+                    <h1>Recetas EKCO</h1>
+                    <h2>Camarones al mojo de ajo</h2>
+                    <p>
+                        Ingredientes:
+                    </p>
+                    <p>
+                        Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book.
+                    </p>
+                    <div class="btn">
+                        <a href="http://example.com">Ver Todo</a>
+                        <hr>
+                    </div>
+                </div>
+            </article>            
+        </section>
     </main>
 </body>
 </html>
