fix syles accordion

--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@
                             <h3>Heading One </h3>
                             <span class="fa fa-minus"></span>
                         </div>
-                        <div class="card__body active">
+                        <div class="card-body active">
                             <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                             tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniamLorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod
                             tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam</p>
