add styles mobile

--- a/index.html
+++ b/index.html
@@ -64,110 +64,113 @@
             </article>            
         </section>
 
-        <section class="products__slides">                               
-            <h1>Los más vendidos</h1>                      
-            <div class="products__container">
-                <div class="product__card">
-                    <img src="./assets/images/product.png" alt="Producto" >
-                    <h3>Título<h3/>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In venenatis eget urna eu imperdiet. Aenean interdum eget lacus in volutpat. Nulla vehicula mauris id suscipit ornare. </p>
-                    <div class="btn btn--center">
-                        <div>
-                            <a href="http://example.com">Ver Todo</a>
-                            <hr>
+        <section class="products__slides">
+            <div class="products__wrapper">
+                <h1>Los más vendidos</h1>                      
+                <div class="products__container">
+                    <div class="product__card">
+                        <img src="./assets/images/product.png" alt="Producto" >
+                        <h3>Título<h3/>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In venenatis eget urna eu imperdiet. Aenean interdum eget lacus in volutpat. Nulla vehicula mauris id suscipit ornare. </p>
+                        <div class="btn btn--center">
+                            <div>
+                                <a href="http://example.com">Ver Todo</a>
+                                <hr>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="product__card">
-                    <img src="./assets/images/product.png" alt="Producto" >
-                    <h3>Título<h3/>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In venenatis eget urna eu imperdiet. Aenean interdum eget lacus in volutpat. Nulla vehicula mauris id suscipit ornare. </p>
-                    <div class="btn btn--center">
-                        <div>
-                            <a href="http://example.com">Ver Todo</a>
-                            <hr>
+                    <div class="product__card">
+                        <img src="./assets/images/product.png" alt="Producto" >
+                        <h3>Título<h3/>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In venenatis eget urna eu imperdiet. Aenean interdum eget lacus in volutpat. Nulla vehicula mauris id suscipit ornare. </p>
+                        <div class="btn btn--center">
+                            <div>
+                                <a href="http://example.com">Ver Todo</a>
+                                <hr>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="product__card">
-                    <img src="./assets/images/product.png" alt="Producto" >
-                    <h3>Título<h3/>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In venenatis eget urna eu imperdiet. Aenean interdum eget lacus in volutpat. Nulla vehicula mauris id suscipit ornare. </p>
-                    <div class="btn btn--center">
-                        <div>
-                            <a href="http://example.com">Ver Todo</a>
-                            <hr>
+                    <div class="product__card">
+                        <img src="./assets/images/product.png" alt="Producto" >
+                        <h3>Título<h3/>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In venenatis eget urna eu imperdiet. Aenean interdum eget lacus in volutpat. Nulla vehicula mauris id suscipit ornare. </p>
+                        <div class="btn btn--center">
+                            <div>
+                                <a href="http://example.com">Ver Todo</a>
+                                <hr>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="product__card">
-                    <img src="./assets/images/product.png" alt="Producto" >
-                    <h3>Título<h3/>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In venenatis eget urna eu imperdiet. Aenean interdum eget lacus in volutpat. Nulla vehicula mauris id suscipit ornare. </p>
-                    <div class="btn btn--center">
-                        <div>
-                            <a href="http://example.com">Ver Todo</a>
-                            <hr>
+                    <div class="product__card">
+                        <img src="./assets/images/product.png" alt="Producto" >
+                        <h3>Título<h3/>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In venenatis eget urna eu imperdiet. Aenean interdum eget lacus in volutpat. Nulla vehicula mauris id suscipit ornare. </p>
+                        <div class="btn btn--center">
+                            <div>
+                                <a href="http://example.com">Ver Todo</a>
+                                <hr>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="product__card">
-                    <img src="./assets/images/product.png" alt="Producto" >
-                    <h3>Título<h3/>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In venenatis eget urna eu imperdiet. Aenean interdum eget lacus in volutpat. Nulla vehicula mauris id suscipit ornare. </p>
-                    <div class="btn btn--center">
-                        <div>
-                            <a href="http://example.com">Ver Todo</a>
-                            <hr>
+                    <div class="product__card">
+                        <img src="./assets/images/product.png" alt="Producto" >
+                        <h3>Título<h3/>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In venenatis eget urna eu imperdiet. Aenean interdum eget lacus in volutpat. Nulla vehicula mauris id suscipit ornare. </p>
+                        <div class="btn btn--center">
+                            <div>
+                                <a href="http://example.com">Ver Todo</a>
+                                <hr>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="product__card">
-                    <img src="./assets/images/product.png" alt="Producto" >
-                    <h3>Título<h3/>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In venenatis eget urna eu imperdiet. Aenean interdum eget lacus in volutpat. Nulla vehicula mauris id suscipit ornare. </p>
-                    <div class="btn btn--center">
-                        <div>
-                            <a href="http://example.com">Ver Todo</a>
-                            <hr>
+                    <div class="product__card">
+                        <img src="./assets/images/product.png" alt="Producto" >
+                        <h3>Título<h3/>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In venenatis eget urna eu imperdiet. Aenean interdum eget lacus in volutpat. Nulla vehicula mauris id suscipit ornare. </p>
+                        <div class="btn btn--center">
+                            <div>
+                                <a href="http://example.com">Ver Todo</a>
+                                <hr>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="product__card">
-                    <img src="./assets/images/product.png" alt="Producto" >
-                    <h3>Título<h3/>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In venenatis eget urna eu imperdiet. Aenean interdum eget lacus in volutpat. Nulla vehicula mauris id suscipit ornare. </p>
-                    <div class="btn btn--center">
-                        <div>
-                            <a href="http://example.com">Ver Todo</a>
-                            <hr>
+                    <div class="product__card">
+                        <img src="./assets/images/product.png" alt="Producto" >
+                        <h3>Título<h3/>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In venenatis eget urna eu imperdiet. Aenean interdum eget lacus in volutpat. Nulla vehicula mauris id suscipit ornare. </p>
+                        <div class="btn btn--center">
+                            <div>
+                                <a href="http://example.com">Ver Todo</a>
+                                <hr>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="product__card">
-                    <img src="./assets/images/product.png" alt="Producto" >
-                    <h3>Título<h3/>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In venenatis eget urna eu imperdiet. Aenean interdum eget lacus in volutpat. Nulla vehicula mauris id suscipit ornare. </p>
-                    <div class="btn btn--center">
-                        <div>
-                            <a href="http://example.com">Ver Todo</a>
-                            <hr>
+                    <div class="product__card">
+                        <img src="./assets/images/product.png" alt="Producto" >
+                        <h3>Título<h3/>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In venenatis eget urna eu imperdiet. Aenean interdum eget lacus in volutpat. Nulla vehicula mauris id suscipit ornare. </p>
+                        <div class="btn btn--center">
+                            <div>
+                                <a href="http://example.com">Ver Todo</a>
+                                <hr>
+                            </div>
                         </div>
                     </div>
-                </div>
-                <div class="product__card">
-                    <img src="./assets/images/product.png" alt="Producto" >
-                    <h3>Título<h3/>
-                    <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In venenatis eget urna eu imperdiet. Aenean interdum eget lacus in volutpat. Nulla vehicula mauris id suscipit ornare. </p>
-                    <div class="btn btn--center">
-                        <div>
-                            <a href="http://example.com">Ver Todo</a>
-                            <hr>
+                    <div class="product__card">
+                        <img src="./assets/images/product.png" alt="Producto" >
+                        <h3>Título<h3/>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. In venenatis eget urna eu imperdiet. Aenean interdum eget lacus in volutpat. Nulla vehicula mauris id suscipit ornare. </p>
+                        <div class="btn btn--center">
+                            <div>
+                                <a href="http://example.com">Ver Todo</a>
+                                <hr>
+                            </div>
                         </div>
                     </div>
+                    
                 </div>
-                
-            </div>
+
+            </div> 
         </section>
 
         <section class="container__items">
